<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fyp.ActivityMeasurements"
    android:background="@color/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abt"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/introbg"
        android:textAllCaps="true"
        android:textSize="50sp" />

    <!--Birthday-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bday"
            android:textSize="20sp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/textclr"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/introbg"
            android:textColor="@color/textclr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/datep"
            />
    </LinearLayout>
    <!--Birthday-->

    <!--Height-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20sp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/textclr"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:digits="0123456789."
            android:inputType="phone"
            android:textColor="@color/textclr"
            android:backgroundTint="@color/introbg"
            android:layout_marginLeft="5dp"
            android:layout_width="100dp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/edh"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="100dp"
            android:digits="0123456789."
            android:inputType="phone"
            android:textColor="@color/textclr"
            android:backgroundTint="@color/introbg"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/edh1"
            android:hint="@string/inches"
            android:textColorHint="@android:color/darker_gray"
            android:visibility="gone"
            />
        <Spinner
            android:layout_width="40pt"
            android:minWidth="50dp"
            android:background="@color/introbg"
            android:layout_height="wrap_content"
            android:id="@+id/sph"
            />
    </LinearLayout>

    <!--Height-->

    <!--Weight-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/textclr"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginLeft="5dp"
            android:layout_width="200dp"
            android:digits="0123456789."
            android:backgroundTint="@color/introbg"
            android:inputType="phone"
            android:textColor="@color/textclr"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/edw"
            />
        <Spinner
            android:layout_width="40pt"
            android:minWidth="50dp"
            android:background="@color/introbg"
            android:layout_height="wrap_content"
            android:id="@+id/spw"
            />
    </LinearLayout>


    <!--Weight-->

    <!--Gender-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gndr"
            android:textSize="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/textclr"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gndrm"
                android:id="@+id/m"
                android:fontFamily="@font/raleway_medium"
                android:textColor="@color/textclr"
                android:checked="false"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gndrf"
                android:id="@+id/f"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/raleway_medium"
                android:textColor="@color/textclr"
                android:checked="false"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gndrus"
                android:id="@+id/us"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/raleway_medium"
                android:textColor="@color/textclr"
                android:checked="true"
                />

        </RadioGroup>
    </LinearLayout>
    <!--Gender-->

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/button_background_green"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btnnxt"
        android:onClick="ValidateData"
        android:textColor="@android:color/white"
        android:textSize="25dp" />
</LinearLayout>
