<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:background="@color/bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Reset Password"
        android:textSize="30sp"
        android:id="@+id/tv"
        android:textAlignment="center"
        android:fontFamily="@font/raleway_bold"
        android:textAllCaps="true"
        android:textColor="@color/textclr"/>

    <EditText
        android:id="@+id/edusern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:lines="1"
        android:layout_below="@id/tv"
        android:textColor="@color/textclr"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/raleway_medium"
        android:textSize="18sp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/login_un_hint" />

    <EditText
        android:id="@+id/ednewPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:lines="1"
        android:visibility="gone"
        android:layout_below="@id/tv"
        android:textColor="@color/textclr"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/raleway_medium"
        android:textSize="18sp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/newpwd" />

    <EditText
        android:id="@+id/edcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:lines="1"
        android:visibility="gone"
        android:layout_below="@id/ednewPwd"
        android:textColor="@color/textclr"
        android:textColorHint="@android:color/darker_gray"
        android:fontFamily="@font/raleway_medium"
        android:textSize="18sp"
        android:maxLines="1"
        android:digits="1234567890"
        android:inputType="number"
        android:ems="4"
        android:hint="@string/code" />

    <Button
        android:id="@+id/btnver"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_brown"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:onClick="updPassword"
        android:visibility="gone"
        android:text="@string/ver"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_medium"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/btnnext"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_brown"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:text="@string/btnnxt"
        android:onClick="getphNo"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_medium"
        android:textSize="18sp"
        />



</RelativeLayout>