<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActivityContactUs"
    android:background="@color/bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/introbg">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_contact_us"
        android:background="@color/introbg"
        android:id="@+id/iv"
        />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:id="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        app:cardBackgroundColor="@color/introbg"
        app:cardCornerRadius="12dp"
        android:outlineSpotShadowColor="@android:color/white"
        android:outlineAmbientShadowColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/cus"
                android:textColor="@color/textclr"
                android:textSize="25sp"
                android:textAllCaps="true"/>

            <!--TO: Layout -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_medium"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:background="@color/textclr"
                    android:hint="@string/custo"
                    android:text="@string/cusEmail"
                    android:fontFamily="@font/raleway_medium"
                    android:enabled="false"
                    android:textColor="@android:color/white"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--TO: Layout End -->

            <!--Subject: Layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editSubj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/raleway_medium"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/edsubj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:fontFamily="@font/raleway_medium"
                    android:background="@color/textclr"
                    android:hint="@string/cusSubj"
                    android:textColor="@android:color/white"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Subject: Layout End -->

            <!--Message: Layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/raleway_medium"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/edcusmsg"
                    android:background="@color/textclr"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:textSize="18dp"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/cusmsg"
                    android:textColor="@android:color/white"
                    android:inputType="textPersonName"
                    android:maxLines="8" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Message: Layout End-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:id="@+id/sendem"
        android:src="@drawable/ic_sendemail" />


</RelativeLayout>