<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActivityFeedback"
    android:background="@color/bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/introbg">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/img_feedback"
            android:background="@color/introbg"
            android:id="@+id/iv"
            />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:id="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        app:cardBackgroundColor="@color/introbg"
        app:cardCornerRadius="12dp"
        android:outlineSpotShadowColor="@android:color/white"
        android:outlineAmbientShadowColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/feedback"
                android:textColor="@color/textclr"
                android:textSize="25sp"
                android:textAllCaps="true"/>

            <!--Message: Layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/raleway_medium"
                android:textColorHint="@android:color/white"
                >

                <EditText
                    android:id="@+id/edmsg"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/textclr"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center"
                    android:hint="@string/feedbackHint"
                    android:inputType="textPersonName"
                    android:maxLines="8"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />
            <!--Message: Layout End-->

            </com.google.android.material.textfield.TextInputLayout>


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:onClick="giveFdbk"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background_brown"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>